add images to 28

--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -44,7 +44,9 @@ To overcome the risks related to the application of liquid solutions, solid and 
 
 ## Characteristics and Materials of Adhesive Meshes
 
-Adhesive meshes are flexible structures made from a single adhesive. Their initial square mesh geometry was recently replaced by a honeycomb design that provides an optimized bonding pattern ([**fig. 28.1**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-1)), while reducing adhesive input even further. The material thickness of the adhesive mesh is about 200 μm, and the interspaces have an average diameter of 500 to 600 μm. One square meter of an adhesive mesh weighs between 15 and 30 g, depending on the production process and adhesive.[^2] The defined honeycomb shape enables an exceptionally uniform distribution of the adhesive throughout the bonding surface. Despite the lack of a carrier material, the meshes have a certain stiffness that allows access to detached layers through gaps or slits.
+Adhesive meshes are flexible structures made from a single adhesive. Their initial square mesh geometry was recently replaced by a honeycomb design that provides an optimized bonding pattern ([fig. 28.1](#fig-28-1)), while reducing adhesive input even further. The material thickness of the adhesive mesh is about 200 μm, and the interspaces have an average diameter of 500 to 600 μm. One square meter of an adhesive mesh weighs between 15 and 30 g, depending on the production process and adhesive.[^2] The defined honeycomb shape enables an exceptionally uniform distribution of the adhesive throughout the bonding surface. Despite the lack of a carrier material, the meshes have a certain stiffness that allows access to detached layers through gaps or slits.
+
+{% figure 'fig-28-1' %}
 
 In contact with water or solvent, the solid meshes become tacky, thereby requiring lower amounts of a liquid phase than solutions do to achieve sufficient adhesion. Proper activation causes only swelling, not dissolution of the mesh, assuring the adhesives remains discretely in the joint without penetrating into the textile. The bond strength can reach similar values to Beva 371 (65 µm) films, depending on the activation parameters.[^3] The bonding characteristics can be adjusted by varying the amount of water or solvent: the more solvent that is applied—up to the point of liquefaction—the stronger the activation and the higher the bond strength tends to be.
 
@@ -66,19 +68,31 @@ Degalan PQ 611 provides very good adhesion to polar and nonpolar substrates alik
 
 So far, we have manually produced sturgeon glue and methylcellulose meshes by using silicone molds. For this purpose, the structure of a polyester monofilament mesh is imprinted in the flattened surface of a kneadable two-component silicone mass. After complete vulcanization, the mesh is taken off and adhesives (in the form of a 20 w/w gel) are filled in using a spatula. Excess material is scraped off. After two to three hours the dried mesh is removed.[^7]
 
-This early technique of producing adhesive meshes can easily be implemented with materials available in conservation studios. However, obtaining uniform results is more difficult with respect to mold and mesh shaping. Greater precision and homogeneity can be achieved by computerized numerical control (CNC) machining, such as laser cutting of the silicone molds ([**fig. 28.2**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-2)). A feasible process for a standardized, larger scale production of adhesive meshes has been refined within the course of the current research project.
+This early technique of producing adhesive meshes can easily be implemented with materials available in conservation studios. However, obtaining uniform results is more difficult with respect to mold and mesh shaping. Greater precision and homogeneity can be achieved by computerized numerical control (CNC) machining, such as laser cutting of the silicone molds ([fig. 28.2](#fig-28-2)). A feasible process for a standardized, larger scale production of adhesive meshes has been refined within the course of the current research project.
+
+{% figure 'fig-28-2' %}
 
 ## Application of Adhesive Meshes—Two Case Studies
 
 The application of adhesive meshes aims at reinforcing degraded canvas with an auxiliary support, such as strip lining, or reattaching of loosened parts along the edges of detached historic linings. The technique was successfully applied in case studies using meshes made from sturgeon glue and methylcellulose. Examples of treated paintings can be found at the Swiss National Museum and the Fondation Beyeler, both in Switzerland, and the Bayerische Staatsgemäldesammlungen in Germany. In addition, different European universities and private conservation studios implemented adhesive meshes for canvas stabilization—and even for full-scale lining.[^8] In the following, two case studies are described to exemplify activation procedures according to the conservation target and the accessibility of the bonding surfaces.
 
-For strip lining, the bonding interfaces are readily accessible. This intervention was realized on a medium-format double-sided canvas painting ([**fig. 28.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-3)).[^9] A sandwich system of two nonwoven polyester strips was chosen.[^10] Methylcellulose meshes made from Benecel A4C[^11] were used, since high bond strength and adhesive stability in variable environmental conditions were required and the canvas was not sensitive to water. To prepare the bonding material, methylcellulose meshes made with laser cut silicone molds were partly activated by slightly moistening the nonwoven polyester before placing the adhesive meshes on the nonwoven strips and drying them under pressure ([**fig. 28.4**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-4)). Activation was then initiated by spraying water with a precision pump sprayer ([**fig. 28.5**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-5)). The meshes were left for ten minutes as methylcellulose takes up water slowly.[^12] Coverage with a Melinex film without direct contact prevented the meshes from drying (see **fig. 28.5**).
+For strip lining, the bonding interfaces are readily accessible. This intervention was realized on a medium-format double-sided canvas painting ([fig. 28.3](#fig-28-3)).[^9] A sandwich system of two nonwoven polyester strips was chosen.[^10] Methylcellulose meshes made from Benecel A4C[^11] were used, since high bond strength and adhesive stability in variable environmental conditions were required and the canvas was not sensitive to water. To prepare the bonding material, methylcellulose meshes made with laser cut silicone molds were partly activated by slightly moistening the nonwoven polyester before placing the adhesive meshes on the nonwoven strips and drying them under pressure ([fig. 28.4](#fig-28-4)). Activation was then initiated by spraying water with a precision pump sprayer ([fig. 28.5](#fig-28-5)). The meshes were left for ten minutes as methylcellulose takes up water slowly.[^12] Coverage with a Melinex film without direct contact prevented the meshes from drying (see [fig. 28.5](#fig-28-5)).
 
-The activation process was repeated twice to apply a total amount of about 3 ml water per 100 square centimeters of mesh, resulting in a relatively high water input that was almost completely absorbed by the mesh. To achieve the bonding, the activated strips were then placed below and on top of the tacking margin of the painting’s canvas (see [**fig. 28.3**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-3)) and left to dry for twenty-four hours under pressure (20 g/cm²) with blotting paper interleaves. After complete drying, it was possible to pull the tacking margin taut enough to remount the painting on a new stretcher, proving that methylcellulose meshes are capable of generating a sufficiently strong bond between two textiles.
+{% figure 'fig-28-3' %}
 
-A different activation approach is necessary when access to the bonding surface is limited. This phenomenon often occurs with lined paintings, such as that shown in [**fig. 28.6**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-6), where the edge of the original canvas is detached locally from the lining canvas. To maintain the historical lining and stabilize loosened areas, insertion of the adhesive was possible only through small gaps, which is why adhesive meshes provided a suitable approach. Activation has to be carried out quickly to avoid excess water in the painting structure. Therefore, Methocel A15LV meshes and sturgeon glue meshes are suitable due to the short time required and the reduced need for water for activation.
+{% figure 'fig-28-4' %}
 
-The application is identical for both adhesives. To uniformly activate the inserted dry mesh, a nonwoven capillary fabric[^13] is used. This material can transport water along its directed fibers and then disperse it onto the mesh. A protrusion of some millimeters allows access for the water to be applied. The adhesive mesh and the capillary fabric are first cut to match the shape of the detachment. Then both the mesh and the capillary fabric are inserted between the canvas layers ([**fig. 28.7**](file:///Users/rbarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/28-Konietzny/fig-28-7)). An additional layer of Melinex on top is advisable to protect the original canvas from being wetted, and light weight is used to keep the layers in contact during the procedure.
+{% figure 'fig-28-5' %}
+
+The activation process was repeated twice to apply a total amount of about 3 ml water per 100 square centimeters of mesh, resulting in a relatively high water input that was almost completely absorbed by the mesh. To achieve the bonding, the activated strips were then placed below and on top of the tacking margin of the painting’s canvas (see [fig. 28.3](#fig-28-3)) and left to dry for twenty-four hours under pressure (20 g/cm²) with blotting paper interleaves. After complete drying, it was possible to pull the tacking margin taut enough to remount the painting on a new stretcher, proving that methylcellulose meshes are capable of generating a sufficiently strong bond between two textiles.
+
+A different activation approach is necessary when access to the bonding surface is limited. This phenomenon often occurs with lined paintings, such as that shown in [fig. 28.6](#fig-28-6), where the edge of the original canvas is detached locally from the lining canvas. To maintain the historical lining and stabilize loosened areas, insertion of the adhesive was possible only through small gaps, which is why adhesive meshes provided a suitable approach. Activation has to be carried out quickly to avoid excess water in the painting structure. Therefore, Methocel A15LV meshes and sturgeon glue meshes are suitable due to the short time required and the reduced need for water for activation.
+
+{% figure 'fig-28-6' %}
+
+The application is identical for both adhesives. To uniformly activate the inserted dry mesh, a nonwoven capillary fabric[^13] is used. This material can transport water along its directed fibers and then disperse it onto the mesh. A protrusion of some millimeters allows access for the water to be applied. The adhesive mesh and the capillary fabric are first cut to match the shape of the detachment. Then both the mesh and the capillary fabric are inserted between the canvas layers ([fig. 28.7](#fig-28-7)). An additional layer of Melinex on top is advisable to protect the original canvas from being wetted, and light weight is used to keep the layers in contact during the procedure.
+
+{% figure 'fig-28-7' %}
 
 Then water is added onto the nonwoven fabric’s edge until it is completely saturated. Immediately after complete saturation—within about five seconds—the fabric and Melinex are removed with a quick pull to prevent the mesh from sticking to the fabric. Finally, pressure is applied (10 g/cm²) until the adhesive has dried. This activation method reduces the amount of water twentyfold compared to the spray activation described above. The resulting bond was found to be strong enough to fix the canvas to the lining fabric anew, yet for reversibility, the lining can easily be peeled off.[^14]
 
