add images to 29

--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -32,7 +32,9 @@ This contribution from the 2019 Conserving Canvas symposium gives insight into t
 
 ### Single-Thread Bonding Technique
 
-The single-thread bonding technology has become well established as a minimally invasive alternative for the treatment of local damages in the canvas, in contrast to the application of patches or the lining of paintings. The aim of the method is to restore the mechanical properties and the optical appearance while preserving the inherent properties of the original textile canvas support. Different bonding techniques are used, depending on the damage patterns that form distinct fracture patterns, as shown schematically in [**fig. 29.1**](fig-29-1).
+The single-thread bonding technology has become well established as a minimally invasive alternative for the treatment of local damages in the canvas, in contrast to the application of patches or the lining of paintings. The aim of the method is to restore the mechanical properties and the optical appearance while preserving the inherent properties of the original textile canvas support. Different bonding techniques are used, depending on the damage patterns that form distinct fracture patterns, as shown schematically in [fig. 29.1](#fig-29-1).
+
+{% figure 'fig-29-1' %}
 
 In the case of cuts or very brittle canvas supports, straight fracture edges often occur, occasionally without any local deformations or gaps. Butt joints are the only option for these fracture phenomena since no overlapping of the thread ends can be achieved. Such bonds are weaker than overlapping joints due to their mechanical force transmission. Therefore, individual supplementary bridging threads are often applied onto the back of the canvas.
 
@@ -90,22 +92,21 @@ For better comprehensibility, a selection of tested adhesives is presented on th
 
 This paper focuses on adhesives for canvases made from cellulosic flax fibers. Previous investigations into different adhesives have taken place, in particular on the basis of bonded single threads which have been uniaxially tensile tested, for example, modifications of sturgeon glue, dispersions based on acrylates, polyvinyl acetates (PVA) or ethylene vinyl acetates (EVA), hot melt adhesives or epoxy resins were tested.[^13] It should be noted that not all of these material groups are equally suitable and that the properties also differ within the groups, depending on the specific adhesive and its individual composition.
 
-The following four water-based adhesives are some of the most promising on the basis of the successive test series by Hannah Flock (for recipes, see [**table 29.1**](table-29-1)):
+The following four water-based adhesives are some of the most promising on the basis of the successive test series by Hannah Flock (for recipes, see [table 29.1](#table-29-1)):
 
 -   A pH-neutral EVA dispersion from the company Lineco (also marketed under the names Pel and Arcare with the same composition), was modified with cellulose ether solution (with gel-like consistency) for improved re-solubility and optimized viscosity for wetting and penetration during bonding as well as a certain associated stiffening.
 
-```{=html}
-<!-- -->
-```
 -   The PVA dispersion Mowilith DHS S1, which performed best among the various PVA dispersions tested,[^14] was also modified by the addition of cellulose ether solution (with gel-like consistency).
 
 -   For the classic “Heiber recipe,” the sturgeon glue-wheat starch paste-mixture, precooked wheat starch was used, because it has a more uniform quality due to industrial pre-gelatinization.
 
 -   A mixture of sturgeon glue and Arbocel cellulose fibers, which consist of pure, lignin-free cellulose.
 
+**table 'table-29-1'**
+
 ### Experimental Setup
 
-These four adhesives have been repeatedly tested over the past years.[^15] The adhesives were examined in the four different bonding situations shown in [**fig. 29.1**](fig-29-1):
+These four adhesives have been repeatedly tested over the past years.[^15] The adhesives were examined in the four different bonding situations shown in [fig. 29.1](#fig-29-1):
 
 -   Butt joint mending (BJ)
 
@@ -115,7 +116,9 @@ These four adhesives have been repeatedly tested over the past years.[^15] The a
 
 -   Overlapped thread ends with intermingling of the fibers (OV+IN).
 
-The uniaxially tested fabric strips were 12 threads wide, and each thread was mended individually. A comparatively large, reproducible overlap of 1 mm was selected for the test series. For butt joints, the two thread ends were positioned without any visible gap, as close as possible, for bonding. A uniform adhesive volume per thread (0.6 µm adhesive droplet) was used for bonding using a microdosage device. The bridging threads were coated with Beva 371 (25 µm film thickness) and attached after bonding by sealing, 10 mm to the left and 10 mm to the right of the bond, with no contact to the actual bond point in the middle. For the bridging threads, weft threads of the chosen test canvas were used. More material details can be seen in [**table 29.2**](table-29-2).[^16]
+The uniaxially tested fabric strips were 12 threads wide, and each thread was mended individually. A comparatively large, reproducible overlap of 1 mm was selected for the test series. For butt joints, the two thread ends were positioned without any visible gap, as close as possible, for bonding. A uniform adhesive volume per thread (0.6 µm adhesive droplet) was used for bonding using a microdosage device. The bridging threads were coated with Beva 371 (25 µm film thickness) and attached after bonding by sealing, 10 mm to the left and 10 mm to the right of the bond, with no contact to the actual bond point in the middle. For the bridging threads, weft threads of the chosen test canvas were used. More material details can be seen in [table 29.2](#table-29-2).[^16]
+
+**table 'table-29-2'**
 
 ## Evaluation of Single-Thread Bonds
 
@@ -125,15 +128,19 @@ However, it has to be considered that in reality, the resulting stresses[^17] an
 
 ### Inherent Scatters
 
-Since the test series have been repeated several times over the last years, two average measured F~max~ values are shown in [**fig. 29.2**](fig-29-2). For each of the different adhesives and bonding techniques, the lowest and highest F~max~ mean values from all test series up to 2019 are presented. The order does not correspond to any chronological sequence. Although the exact same test setup and experimental design (test specimen preparation, testing,[^18] and evaluation) were always followed, and at least ten to twenty test specimens of one type were tested each time, the average mean values are hardly reproducible due to scattering results.
+Since the test series have been repeated several times over the last years, two average measured F~max~ values are shown in [fig. 29.2](#fig-29-2). For each of the different adhesives and bonding techniques, the lowest and highest F~max~ mean values from all test series up to 2019 are presented. The order does not correspond to any chronological sequence. Although the exact same test setup and experimental design (test specimen preparation, testing,[^18] and evaluation) were always followed, and at least ten to twenty test specimens of one type were tested each time, the average mean values are hardly reproducible due to scattering results.
 
-Because **fig. 29.2** shows overall low and high average measured values, standard deviations as absolute scatter measures in the diagrams were omitted. Instead, [**fig. 29.3**](fig-29-3) shows the relative coefficients of variation corresponding to **fig. 29.2**. The variation coefficients of F~max~ lie within a range of approximately 6%–30% (in one case almost 40%), which corresponds to quite a large range of individual measured values from which the mean value is derived. In comparison, the variation coefficient of intact canvas samples shows a value of only approximately 6%, which probably results from variations in the natural fiber and the canvas production. Therefore, bonding causes the scattering of the measured values of all adhesives tested.
+{% figure 'fig-29-2' %}
+
+Because [fig. 29.2](#fig-29-2) shows overall low and high average measured values, standard deviations as absolute scatter measures in the diagrams were omitted. Instead, [fig. 29.3](#fig-29-3) shows the relative coefficients of variation corresponding to [fig. 29.2](#fig-29-2). The variation coefficients of F~max~ lie within a range of approximately 6%–30% (in one case almost 40%), which corresponds to quite a large range of individual measured values from which the mean value is derived. In comparison, the variation coefficient of intact canvas samples shows a value of only approximately 6%, which probably results from variations in the natural fiber and the canvas production. Therefore, bonding causes the scattering of the measured values of all adhesives tested.
+
+{% figure 'fig-29-3' %}
 
 Extensive investigations into this problem made clear that the scattering is to be regarded as inherent in the technology: irrespective of the greatest possible standardization of the substrate to be bonded, there are always unknown differences in the individual sectional structure, geometry, length, torsion and porosity of fibers and threads. All these aspects result in different wetting, penetration and formation of the adhesive joint and its interphases as well as in different mechanical behavior under tensile testing, even with a standardized quantity and application of the adhesive. Thread-by-thread mends inevitably scatter in their bond strengths. In practice, conservators must therefore always consider both the best case and the worst case, since the strengths of single-thread bonds can differ.[^19]
 
 ### Bonding Technique Evaluation
 
-To aid the clarity of the figure scaling, the intact references without bonds are not shown in [**fig. 29.2**](fig-29-2): the F~max~ of the intact canvas strips was approximately 270 N on arithmetic mean.[^20] The average F~max~ of the bonded joints, using the four different adhesives in different joining situations, is always less than the strength of the intact canvas.
+To aid the clarity of the figure scaling, the intact references without bonds are not shown in [fig. 29.2](#fig-29-2): the F~max~ of the intact canvas strips was approximately 270 N on arithmetic mean.[^20] The average F~max~ of the bonded joints, using the four different adhesives in different joining situations, is always less than the strength of the intact canvas.
 
 Regarding the different types of bonding, a successive increase can be noted for all adhesives from butt joints to butt joints with bridging threads to simple overlapping joints and to overlapping joints with intermingled fibers of the thread ends. The enlargement of the bonding surface and mechanical anchoring result in an improved force transmission and thus higher maximum strengths.
 
@@ -141,7 +148,9 @@ Hence, overlapping bonds are more reliable than butt joint bonds and should ther
 
 ### Adhesive Evaluation
 
-Butt joints without an overlap are the most challenging bonds, due to lower tensile strengths. In the past, these cases were frequently bonded with epoxy resins, which are rigid, irreversible and sometimes become brittle due to ageing. Today, more suitable adhesives have been found. However, the Heiber’s “classic mixture” of sturgeon glue and wheat starch paste is not suitable for this bonding technique,[^22] as is shown in [**fig. 29.4**](fig-29-4), which represents a simplified section of data from [**fig. 29.2**](fig-29-2). Particularly high bond strengths on butt joints could be achieved with the mixture of sturgeon glue and cellulose fibers. At the same time, this adhesive mixture is also less suitable for overlapping-intermingled bonding techniques, since the bonds quickly turn out to be too strong. The condition of the painting or canvas must always be taken into account: very brittle, degraded fabrics may also be too weak for the application of this adhesive mixture in butt joint technology. In such cases, it may be advisable to switch to the pH-neutral EVA dispersion Lineco with cellulose ether additive (cellulose fibers can also be added here, for additional reinforcement and minimization of creep tendencies).[^23]
+Butt joints without an overlap are the most challenging bonds, due to lower tensile strengths. In the past, these cases were frequently bonded with epoxy resins, which are rigid, irreversible and sometimes become brittle due to ageing. Today, more suitable adhesives have been found. However, the Heiber’s “classic mixture” of sturgeon glue and wheat starch paste is not suitable for this bonding technique,[^22] as is shown in [fig. 29.4](#fig-29-4), which represents a simplified section of data from [fig. 29.2](#fig-29-2). Particularly high bond strengths on butt joints could be achieved with the mixture of sturgeon glue and cellulose fibers. At the same time, this adhesive mixture is also less suitable for overlapping-intermingled bonding techniques, since the bonds quickly turn out to be too strong. The condition of the painting or canvas must always be taken into account: very brittle, degraded fabrics may also be too weak for the application of this adhesive mixture in butt joint technology. In such cases, it may be advisable to switch to the pH-neutral EVA dispersion Lineco with cellulose ether additive (cellulose fibers can also be added here, for additional reinforcement and minimization of creep tendencies).[^23]
+
+{% figure 'fig-29-4' %}
 
 The stabilization of butt joints by using bridging threads applied to the back can be recommended due to the significant increase in the average bond strength as well as slower opening in the event of adhesive failure. It is important to point out that the mechanical requirements for bridging threads are completely different to the ones for single-thread bonding: adhesives used for thread-by-thread mending would be too stiff and “inflexible” in terms of a low ductility for bridging threads. Such bridges can become detached or, in the worst case, cause out-of-plane deformations. Bridging threads should function as a “flexible” additional force transmission line and support the stronger, actual bond. The main force transmission should take place in the bonded original thread material. The bridging threads should serve only as an additional transmission line through shear force interaction, and not be explicitly chosen to be stiffening or similar through the choice of material. Ideally, this requires a rather soft, stretchable adhesive that can react in a compensating manner to movements of the textile support. Good adhesion with comparatively weak cohesion under high elongations, as in the case of thermoplastic reactivation of Beva 371 film (25 µm film in the test series), is ideal. As an alternative, the liquid pH neutral EVA dispersion Evacon-R (with optional addition of methyl-cellulose ether) could be considered for very rigid fabric structures. Dried Evacon-R films are less stretchable in comparison and are resoluble in water in terms of reversibility.[^24] Acrylic dispersions might also be an option, though they are known to be unsuitable for single-thread bonding[^25] due to their comparatively soft and extensible properties.[^26]
 
@@ -153,23 +162,29 @@ On some fabrics, strong darkening or gloss formation can occur when using the mi
 
 The mixture of sturgeon glue and Arbocel fibers is a comparatively new adhesive that can compete even with presumably strong epoxy resins.[^29] Arbocel cellulose fibers are high-purity industrial products and are available in various lengths and thicknesses. This quality and standardization has many advantages over individually cut linen fibers. In the presented tests, Arbocel BWW 40 with a fiber length of 200 µm was used. Flock also investigated the question of whether shorter or longer fibers, or a mix, could also be suitable as fillers to improve embedding and force transmission properties, using canvas strips with butt joints for uniaxial short-term testing.[^30] The basic recipe of a 25% sturgeon glue solution and added cellulose fibers (20:1 by weight) was tested.
 
-The results show the weakest bond strengths when using very short (Arbocel BC 600-30, average length 40 µm) and, especially, very long fiber types (Arbocel BC 200, average length 300 µm), as can be seen in [**fig. 29.5**](fig-29-5).[^31] Therefore, these types are less suitable as adhesive fillers for achieving high bond strengths in butt joints. The sturgeon glue mixtures with pure Arbocel types of medium fiber lengths (B 00, B 800, BWW 40) are quite comparable with regard to the achieved bond strengths and averaged total strains of the test specimens.[^32] The fiber length of 200 µm (Arbocel BWW 40) should be highlighted, as it seems to enable an ideal compromise in embedding and force transmission. The mixture has been in regular use at CICS since 2014 for butt joints in textile painting supports and has proven itself as an alternative to epoxy resins, especially for cuts.
+The results show the weakest bond strengths when using very short (Arbocel BC 600-30, average length 40 µm) and, especially, very long fiber types (Arbocel BC 200, average length 300 µm), as can be seen in [fig. 29.5](#fig-29-5).[^31] Therefore, these types are less suitable as adhesive fillers for achieving high bond strengths in butt joints. The sturgeon glue mixtures with pure Arbocel types of medium fiber lengths (B 00, B 800, BWW 40) are quite comparable with regard to the achieved bond strengths and averaged total strains of the test specimens.[^32] The fiber length of 200 µm (Arbocel BWW 40) should be highlighted, as it seems to enable an ideal compromise in embedding and force transmission. The mixture has been in regular use at CICS since 2014 for butt joints in textile painting supports and has proven itself as an alternative to epoxy resins, especially for cuts.
+
+{% figure 'fig-29-5' %}
 
 The investigated fiber blends show a similar mechanical behavior to the original recipe only with fibers of type BWW 40: for this purpose, 1:1 mixtures (by weight) of Arbocel BWW 40 with a type of shorter fiber length were produced. The differences in the test results due to mixing with the types BC 600-30 (40 µm), B 00 (120 µm) and B 800 (130 µm) were marginal.[^33] The different recipes, whether the pure fiber types of medium length or the other mixtures mentioned, show slightly different viscosities. Thus, in individual cases, depending on the required processing properties, it is possible to use one of these alternatives instead of the proven type Arbocel BWW 40.
 
 ## Adhesive Application
 
-The choice of a suitable application method has a particularly high influence on the reliable and constant quality of bonds, as well as the reduction of the scattering of the bonding qualities in the case of sturgeon glue-cellulose fiber-mixtures. The successful application of, especially, those adhesive mixtures containing fibers is directly linked to the correct application. Therefore, use of the newly developed Consolidation Pen Winnie is recommended as an application method for sturgeon glue-cellulose fiber-adhesives ([**fig. 29.6**](29-6)). The Consolidation Pen Winnie was used for standardized adhesive application of 0.6 µl droplets in the tests to examine the influence of different cellulose fiber lengths.
+The choice of a suitable application method has a particularly high influence on the reliable and constant quality of bonds, as well as the reduction of the scattering of the bonding qualities in the case of sturgeon glue-cellulose fiber-mixtures. The successful application of, especially, those adhesive mixtures containing fibers is directly linked to the correct application. Therefore, use of the newly developed Consolidation Pen Winnie is recommended as an application method for sturgeon glue-cellulose fiber-adhesives ([fig. 29.6](#fig-29-6)). The Consolidation Pen Winnie was used for standardized adhesive application of 0.6 µl droplets in the tests to examine the influence of different cellulose fiber lengths.
+
+{% figure 'fig-29-6' %}
 
 The standardized application of small adhesive droplets of comparable volume, especially for adhesives that are applied warmer than room temperature, is typically a great challenge. This is especially true for the sturgeon glue-cellulose fiber-mixture since the uniform fiber distribution in the adhesive droplet presents an additional difficulty. For example, an initial test series in 2015 produced highly inhomogeneous results without any conclusive reference to the properties of the different Arbocel types. In the course of the error analysis, it became clear that the previous application by means of a microdosage device[^34] caused excessive fluctuations in the fiber content and therefore had to be optimized. After numerous preliminary tests and extensive product development, a heat-able sleeve for a mini-syringe with a low-binding pipette tip was developed by Star Tec Products, which enables the dosing of finest adhesive droplets of constant volume and homogeneous adhesive composition with regard to fiber distribution.[^35]
 
 ## The Consolidation Pen Winnie
 
-The Consolidation Pen Winnie, named after the pioneer of thread-by-thread mending, Winfried Heiber, is a heat sleeve in which aqueous adhesive solutions can be heated in a special syringe. The temperature of the heating sleeve (which contains the heating element) can be regulated with the control unit, as shown in [**fig. 29.6**](fig-29-6).[^36] The heatable adhesive application device allows for precise and fast application of even highly concentrated animal glue solutions, including, for example, 20–30% solid content sturgeon glue and mixtures with wheat starch paste or Arbocel cellulose fibers. The great advantage is that despite heating, the adhesive concentration in the syringe does not change. The Consolidation Pen Winnie can be comfortably operated with one hand without any appreciable effort, as shown in [**fig. 29.7**](fig-29-7).
+The Consolidation Pen Winnie, named after the pioneer of thread-by-thread mending, Winfried Heiber, is a heat sleeve in which aqueous adhesive solutions can be heated in a special syringe. The temperature of the heating sleeve (which contains the heating element) can be regulated with the control unit, as shown in [fig. 29.6](#fig-29-6).[^36] The heatable adhesive application device allows for precise and fast application of even highly concentrated animal glue solutions, including, for example, 20–30% solid content sturgeon glue and mixtures with wheat starch paste or Arbocel cellulose fibers. The great advantage is that despite heating, the adhesive concentration in the syringe does not change. The Consolidation Pen Winnie can be comfortably operated with one hand without any appreciable effort, as shown in [fig. 29.7](#fig-29-7).
+
+{% figure 'fig-29-7' %}
 
 The highlight that makes the Winnie a precision instrument is the selected low-binding pipette tip: its special conical shape ensures fine dosing. The transparent plastic nozzle made of polypropylene ensures a controllable material discharge at the approximately 0.8 mm diameter opening. This special low-binding tip, inert and coming from pipetting “long sticky molecules” in microbiology,[^37] is indispensable for the application of finest droplets of highly viscous adhesive solutions, as the comparison with numerous cannulas and other pipette tips showed. The syringe and pipette tip are connected with a silicone tube. This simple connection provides sufficient tightness and stability for safe removal of the entire adhesive syringe from the heating sleeve. At the same time, quick assembly and disassembly is ensured.
 
-The entire adhesive application takes place directly at the damaged area under the stereo microscope.[^38] This is accompanied by a more relaxed and rapid bonding process. The adhesive is transferred from the tip of the pipette to the thread ends with a polystyrene strip or a Weston probe (see [**fig. 29.7**](fig-29-7)). In some cases, for example, with particularly large thread diameters, the adhesive can be dripped or placed directly onto the thread ends with the pipette tip. The adhesive flow, and thus the droplet size at the pipette tip, can be regulated by the pressure on the syringe plunger and, to a certain degree, by temperature control. The incorporation of the adhesive between the fibers with fine instruments remains indispensable in case of closing tears and cuts in canvas supports.
+The entire adhesive application takes place directly at the damaged area under the stereo microscope.[^38] This is accompanied by a more relaxed and rapid bonding process. The adhesive is transferred from the tip of the pipette to the thread ends with a polystyrene strip or a Weston probe (see [fig. 29.7](#fig-29-7)). In some cases, for example, with particularly large thread diameters, the adhesive can be dripped or placed directly onto the thread ends with the pipette tip. The adhesive flow, and thus the droplet size at the pipette tip, can be regulated by the pressure on the syringe plunger and, to a certain degree, by temperature control. The incorporation of the adhesive between the fibers with fine instruments remains indispensable in case of closing tears and cuts in canvas supports.
 
 The Consolidation Pen Winnie was initially developed for single-thread bonding to close tears and cuts in canvas supports.[^39] Consequently, it is equally suitable for bonding processes when it comes to fabric inserts[^40] for canvas supports. Further investigations will show to what extent the new adhesive application method with the Winnie will influence the future choice of adhesive for single-thread bonding. The Winnie system opens the possibility that gelatin might be considered for the first time as an adhesive for tear mending: possibly suitable gelatin types are still to be tested.[^41] Up to now, the low gel temperature of sturgeon glue was indispensable for the traditional application method in practical conservation, the transfer of the adhesive from a small glass jar outside the painting with the head of an insect pin. This application technique has many disadvantages and can now be avoided in the future.
 
